# OCRganizer

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  404.html  COMPANY_NORMALIZATION.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  app.py  cli.py  config.yaml  env.example  final_test_results.json  improved_test_results.json  index.html  mkdocs.yml  ocr_test_results.json  preview_pdfs.sh  process_pdfs.sh  production_results.json  pyproject.toml  requirements.txt  run.sh  setup.py  setup.sh  sitemap.xml  test_lm_studio.py  test_results.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml
ai-provider-setup/: index.html
api/: index.html
cli-usage/: index.html
configuration/: index.html
developer-guide/: index.html
docs/: ai-provider-setup.md  api.md  cli-usage.md  configuration.md  developer-guide.md  index.md  installation.md  lm-studio-setup.md  quick-start.md  troubleshooting.md  user-guide.md
installation/: index.html
lm-studio-setup/: index.html
quick-start/: index.html
scripts/: setup_local_llm.sh  test-ci.sh  test_llm_setup.py  version.py
search/: search_index.json
src/: __init__.py  ai_analyzer.py  company_normalizer.py  config.py  file_organizer.py  lm_studio_client.py  pdf_processor.py
templates/: index.html
tests/: conftest.py  test_ai_analyzer.py  test_ai_analyzer_improved.py  test_config.py  test_e2e_integration.py  test_file_organizer.py  test_lm_studio_client.py  test_pdf_processor.py
troubleshooting/: index.html
user-guide/: index.html
